--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,10 @@
 apply from: "config.gradle"
 buildscript {
     repositories {
+        maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
@@ -18,6 +20,7 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
